doctorapp/force-app/main/default/objects/Return_Item__c/Return_Item__c.object-meta.xml
<CustomObject>
    <description>Line item of a return (detail of Return).</description>
    <label>Return Item</label>
    <nameField>
        <displayFormat>RI-{000000}</displayFormat>
        <label>Return Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Return Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>