doctorapp/force-app/main/default/objects/Return_Item__c/fields/Original_Sale_Item__c.field-meta.xml
<CustomField>
    <fullName>Original_Sale_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>References the specific Sale Item.</description>
    <label>Original Sale Item</label>
    <referenceTo>Sale_Item__c</referenceTo>
    <relationshipLabel>Return Items</relationshipLabel>
    <relationshipName>Return_Items</relationshipName>
    <type>Lookup</type>
</CustomField>