doctorapp/force-app/main/default/objects/Return_Item__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Reason specific to this item.</description>
    <label>Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>