doctorapp/force-app/main/default/objects/Return_Item__c/validationRules/Non_Negative_Amounts.validationRule-meta.xml
<ValidationRule>
    <fullName>Non_Negative_Amounts</fullName>
    <active>true</active>
    <description>Return line monetary values cannot be negative.</description>
    <errorConditionFormula>Unit_Price__c &lt; 0 || Refund_Amount__c &lt; 0</errorConditionFormula>
    <errorMessage>Unit Price and Refund Amount cannot be negative.</errorMessage>
</ValidationRule>